[package]
name = "git-actor"
version = "0.3.2"
description = "A way to identify git actors"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
edition = "2018"
include = ["src/**/*"]

[lib]
doctest = false

[features]
serde1 = ["serde", "bstr/serde1"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
quick-error = "2.0.0"
btoi = "0.4.2"
bstr = { version = "0.2.13", default-features = false, features = ["std"]}
nom = { version = "6", default-features = false, features = ["std", "alloc"]}
itoa = "0.4.6"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}

[dev-dependencies]
pretty_assertions = "0.7.1"
git-testtools = { path = "../tests/tools"}
