[package]
name = "git-actor"
version = "0.11.2"
description = "A way to identify git actors"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
edition = "2018"
include = ["src/**/*"]

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "bstr/serde1", "git-date/serde1"]

[dependencies]
git-features = { version = "^0.22.1", path = "../git-features", optional = true }
git-date = { version = "^0.0.4", path = "../git-date" }

quick-error = "2.0.0"
btoi = "0.4.2"
bstr = { version = "0.2.13", default-features = false, features = ["std", "unicode"]}
nom = { version = "7", default-features = false, features = ["std"]}
itoa = "1.0.1"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
git-testtools = { path = "../tests/tools"}

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]
