[package]
name = "git-attributes"
version = "0.3.1"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project dealing .gitattributes files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
include = ["src/**/*", "CHANGELOG.md"]

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "bstr/serde1", "git-glob/serde1", "compact_str/serde"]

[dependencies]
git-features = { version = "^0.22.1", path = "../git-features" }
git-path = { version = "^0.4.0", path = "../git-path" }
git-quote = { version = "^0.2.0", path = "../git-quote" }
git-glob = { version = "^0.3.1", path = "../git-glob" }

bstr = { version = "0.2.13", default-features = false, features = ["std"]}
unicode-bom = "1.1.4"
thiserror = "1.0.26"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}
compact_str = "0.4"

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
