[package]
name = "git-bitmap"
version = "0.1.2"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project dedicated implementing the standard git bitmap format"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"

[lib]
doctest = false
test = true

[dependencies]
quick-error = "2.0.0"

[dev-dependencies]
git-testtools = { path = "../tests/tools"}
