[package]
name = "git-bitmap"
version = "0.2.2"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "Please use `gix-<thiscrate>` instead ('git' -> 'gix')"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.64"

[lib]
doctest = false
test = true

[dependencies]
quick-error = "2.0.0"

[dev-dependencies]
git-testtools = { path = "../tests/tools"}
