[package]
name = "git-chunk"
version = "0.2.0"
description = "Interact with the git chunk file format used in multi-pack index and commit-graph files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/gitoxide"
documentation = "https://github.com/git/git/blob/seen/Documentation/technical/chunk-format.txt"
license = "MIT/Apache-2.0"
edition = "2018"
include = ["src/**/*", "CHANGELOG.md"]

[lib]
doctest = false
test = false

[dependencies]
quick-error = "2.0.0"
