[package]
name = "git-chunk"
version = "0.4.2"
description = "Please use `gix-<thiscrate>` instead ('git' -> 'gix')"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/gitoxide"
documentation = "https://github.com/git/git/blob/seen/Documentation/technical/chunk-format.txt"
license = "MIT/Apache-2.0"
edition = "2021"
include = ["src/**/*", "CHANGELOG.md"]
rust-version = "1.64"

[lib]
doctest = false
test = false

[dependencies]
thiserror = "1.0.34"
