[package]
name = "git-command"
version = "0.1.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project handling internal git command execution"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
bstr = "1.0.1"

[dev-dependencies]
git-testtools = { path = "../tests/tools" }
