[package]
name = "git-config-value"
version = "0.10.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A crate of the gitoxide project providing git-config value parsing"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "bstr/serde"]

[dependencies]
git-path = { version = "^0.7.0", path = "../git-path" }

thiserror = "1.0.32"
bstr = "1.0.1"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}
bitflags = "1.3.2"

document-features = { version = "0.2.0", optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]
