[package]
name = "git-config"
version = "0.4.0"
repository = "https://github.com/Byron/gitoxide"
description = "A git-config file parser and editor from the gitoxide project"
license = "MIT OR Apache-2.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"
keywords = ["git-config", "git", "config", "gitoxide"]
categories = ["config", "parser-implementations"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[features]
# serde = ["serde_crate"]

[dependencies]
git-features = { version = "^0.21.0", path = "../git-features" }
git-path = { version = "^0.1.2", path = "../git-path" }
git-sec = { version = "^0.1.1", path = "../git-sec" }
git-ref = { version = "0.13.0", path = "../git-ref" }
git-glob = { version = "0.3.0", path = "../git-glob" }

dirs = "4"
nom = { version = "7", default_features = false, features = [ "std" ] }
memchr = "2"
serde_crate = { version = "1", package = "serde", optional = true }
pwd = "1.3.1"
thiserror = "1.0.26"
unicode-bom = "1.1.4"
bstr = { version = "0.2.13", default-features = false, features = ["std"] }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}
serial_test = "0.6.0"
serde_derive = "1.0"
criterion = "0.3"
tempfile = "3.2.0"

[[bench]]
name = "large_config_file"
harness = false
path = "./benches/large_config_file.rs"
