[package]
name = "git-config"
version = "0.13.0"
repository = "https://github.com/Byron/gitoxide"
description = "A git-config file parser and editor from the gitoxide project"
license = "MIT OR Apache-2.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2021"
keywords = ["git-config", "git", "config", "gitoxide"]
categories = ["config", "parser-implementations"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "bstr/serde", "git-sec/serde1", "git-ref/serde1", "git-glob/serde1", "git-config-value/serde1"]

[dependencies]
git-features = { version = "^0.25.0", path = "../git-features"}
git-config-value = { version = "^0.10.0", path = "../git-config-value" }
git-path = { version = "^0.7.0", path = "../git-path" }
git-sec = { version = "^0.6.0", path = "../git-sec" }
git-ref = { version = "^0.21.0", path = "../git-ref" }
git-glob = { version = "^0.5.1", path = "../git-glob" }

nom = { version = "7", default_features = false, features = [ "std" ] }
memchr = "2"
thiserror = "1.0.26"
unicode-bom = "1.1.4"
bstr = { version = "1.0.1", default-features = false, features = ["std"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}
smallvec = "1.9.0"
once_cell = "1.14.0"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}
git-repository = { path = "../git-repository" }
serial_test = "0.9.0"
serde_derive = "1.0"
criterion = "0.4.0"
tempfile = "3.2.0"

[[bench]]
name = "large_config_file"
harness = false
path = "./benches/large_config_file.rs"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]
