[package]
name = "git-credentials"
version = "0.4.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project to interact with git credentials helpers"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "bstr/serde1", "git-sec/serde1"]
## Enable prompting the user for credentials when using the cascading helper implementation (similar to `git credential`).
prompt = ["rustyline"]

[dependencies]
git-sec = { version = "^0.3.1", path = "../git-sec" }
git-url = { version = "^0.7.2", path = "../git-url" }
git-path = { version = "^0.4.1", path = "../git-path" }
git-command = { version = "0.1.0", path = "../git-command" }

thiserror = "1.0.32"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
bstr = { version = "0.2.13", default-features = false, features = ["std"]}
rustyline = { version = "10.0.0", optional = true }

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools" }
git-sec = { path = "../git-sec" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]
