[package]
name = "git-credentials"
version = "0.8.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project to interact with git credentials helpers"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "bstr/serde", "git-sec/serde1"]

[dependencies]
git-sec = { version = "^0.6.0", path = "../git-sec" }
git-url = { version = "^0.12.0", path = "../git-url" }
git-path = { version = "^0.7.0", path = "../git-path" }
git-command = { version = "^0.2.0", path = "../git-command" }
git-config-value = { version = "^0.10.0", path = "../git-config-value" }
git-prompt = { version = "^0.3.0", path = "../git-prompt" }

thiserror = "1.0.32"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
bstr = { version = "1.0.1", default-features = false, features = ["std"]}



document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools" }
git-sec = { path = "../git-sec" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]
