[package]
name = "git-diff"
version = "0.18.1"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "Calculate differences between various git objects"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
include = ["src/**/*"]

[lib]
doctest = false

[dependencies]
git-hash = { version = "^0.9.9", path = "../git-hash" }
git-object = { version = "^0.20.3", path = "../git-object" }
thiserror = "1.0.32"
similar = { version = "2.2.0", features = ["bytes"] }

[dev-dependencies]
git-odb = { path = "../git-odb" }
git-traverse = { path = "../git-traverse" }
git-testtools = { path = "../tests/tools" }
