[package]
name = "git-diff"
version = "0.23.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "Calculate differences between various git objects"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*"]

[features]
serde1 = ["serde", "git-hash/serde1", "git-object/serde1"]

[lib]
doctest = false

[dependencies]
git-hash = { version = "^0.10.1", path = "../git-hash" }
git-object = { version = "^0.23.0", path = "../git-object" }
thiserror = "1.0.32"
imara-diff = "0.1.3"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}

[dev-dependencies]
git-odb = { path = "../git-odb" }
git-traverse = { path = "../git-traverse" }
git-testtools = { path = "../tests/tools" }
