[package]
name = "git-discover"
version = "0.12.1"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "Discover git repositories and check if a directory is a git repository"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "CHANGELOG.md"]
rust-version = "1.64"

[lib]
doctest = false

[dependencies]
git-sec = { version = "^0.6.1", path = "../git-sec" }
git-path = { version = "^0.7.0", path = "../git-path" }
git-ref = { version = "^0.23.1", path = "../git-ref" }
git-hash = { version = "^0.10.1", path = "../git-hash" }

bstr = { version = "1.0.1", default-features = false, features = ["std", "unicode"] }
thiserror = "1.0.26"

[dev-dependencies]
git-testtools = { path = "../tests/tools" }
serial_test = "0.10.0"
is_ci = "1.1.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
defer = "0.1.0"

[target.'cfg(any(unix, windows))'.dev-dependencies]
tempfile = "3.2.0"
