[package]
name = "git-discover"
version = "0.13.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "Discover git repositories and check if a directory is a git repository"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "CHANGELOG.md"]
rust-version = "1.64"

[lib]
doctest = false

[dependencies]
git-sec = { version = "^0.6.2", path = "../git-sec" }
git-path = { version = "^0.7.1", path = "../git-path" }
git-ref = { version = "^0.24.0", path = "../git-ref" }
git-hash = { version = "^0.10.2", path = "../git-hash" }

bstr = { version = "1.0.1", default-features = false, features = ["std", "unicode"] }
thiserror = "1.0.26"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.3"

[dev-dependencies]
git-testtools = { path = "../tests/tools" }
serial_test = "1.0.0"
is_ci = "1.1.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
defer = "0.1.0"

[target.'cfg(any(unix, windows))'.dev-dependencies]
tempfile = "3.2.0"
